--- a/xnet_standalone/branches/public/run1/control
+++ b/xnet_standalone/branches/public/run1/control
@@ -30,8 +30,8 @@ tso
   he4  c12  o16 ne20 mg24 si28  s32 ar36 ca40 ti44 cr48 fe52 ni56 zn60
 ## Input Controls
 # Nuclear Data Directory
-../test/Data_alpha
+./Data_alpha_min
 # Initial Abundance and Thermodynamic Trajectory Files
-../test/Data_alpha/ab_he
-../th_constant
+./Data_alpha_min/ab_co
+./th_constant
 
